--- a/searchestilo.css
+++ b/searchestilo.css
@@ -1,6 +1,18 @@
+button {
+    font-family: 'Open Sans';
+    font-style: normal;
+    border-style: none;
+    padding: auto;
+    margin: 10px;
+    background: #FF3D71;
+    color: white; 
+    cursor: pointer;
+}
+
+
 *{
     box-sizing: border-box;
-    margin: 20px auto -20px;
+    margin: 40px auto -20px;
     border-radius: 10px;
 }
 
@@ -35,15 +47,13 @@ html, body {
 
     font-family: 'Open Sans';
     background: white;
-    margin: 5px auto 20px;
+    margin: -30px auto 20px;
     padding: 5px;
-    border-radius: 15px;
+    border-radius: 20px;
     width: 250px;
     
 }
 
 img {
     width: auto;
-    background-image: linear-gradient(#DB2C66 38px, white 5px) ;
-    border-radius: 50%;
 }
