--- a/searchestilo.css
+++ b/searchestilo.css
@@ -26,7 +26,7 @@ html, body {
 
     background: white;
     border-radius: 50px;
-    border-style: solid;
+    border: 3px solid #43E97B;
     font-family: 'Open Sans';
 }
 
@@ -46,7 +46,8 @@ html, body {
 .whitebox {
 
     font-family: 'Open Sans';
-    background: white;
+    background: #F7F9FC;
+    color: #2E3A59;
     margin: -30px auto 20px;
     padding: 5px;
     border-radius: 20px;
@@ -56,4 +57,9 @@ html, body {
 
 img {
     width: auto;
+    
+}
+
+.lista {
+    flex-direction: column;
 }
