--- a/estilos.css
+++ b/estilos.css
@@ -1,15 +1,13 @@
 
 body {
-  font-family: 'Open Sans';
-  margin: auto;  
-
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;  
+  background: linear-gradient(90deg, #43E97B 0%, #38F9D7 100%);
 }
 
-.container {
-  background: linear-gradient(90deg, #43E97B 0%, #38F9D7 100%);
-  display: flex;
+.container, .button {
   align-items: center;
-  text-align: center;
+  display: flex;
   justify-content: center;
   flex-direction: column;
   width: 100vw;
@@ -17,19 +15,18 @@ body {
 
 }
 
-img {
-  width: auto;
-  height: auto;
+img{
+  padding: 24px;
 }
 
 a {
   background: #FF3D71;
   border-style: none;
-  font-family: 'Open Sans';
   font-style: normal;
   color: white;
   border-radius: 42px;
-  width: 5rem;
-  height: 2rem; 
-  cursor: pointer;
+  text-decoration: unset;
+  padding: 16px;
+  text-align: center;
+  
 }  
