--- a/ex2.css
+++ b/ex2.css
@@ -10,50 +10,63 @@ body {
   color: #ffffff;
 }
 
-.container {
+.page__container {
   height: 100vh;
   width: 100vw;
   display: flex;
 }
 
-.main {
-  display: flex;
-  flex-direction: column;
+.menu {
+  padding: 25px;
+  border-right: 1px solid gray;
+  position: relative;
 }
 
-.menu {
-  padding: 8px;
-  border-right: 1px solid gray;
+.menu__action {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    transform: translateX(50%);
+    background-color: #fff;
+    border-radius: 100%;
+    border: 1px solid #fff;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.menu__action-icon {
+    height: 50%;
+    width: auto;
 }
 
 .menu__icons {
   margin-bottom: 50px;
+  position: relative;
 }
 
-.menu__icons-img {
-  height: 32px;
+.menu__logo {
+  height: 40px;
   width: auto;
-}
-
-.menu__icons-icon {
-  background-color: blue;
-  border-radius: 100%;
-  padding: 3px;
-  height: 10px;
-  width: 10px;
 }
 
 .menu__body {
-  margin-top: 15px;
+  margin-top: 45px;
 }
 
 .menu__body-img-username {
-  height: 34px;
+  height: 30px;
   width: auto;
+  border-radius: 100%;
 }
 
 .menu__body-username {
   padding-left: 10px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .menu__body-img {
@@ -63,23 +76,35 @@ body {
 }
 
 .menu__body-list-container {
-  padding-left: 8px;
+  padding-left: 0;
 }
 
 .menu__body-list {
   display: flex;
+  align-items: center;
   margin-bottom: 15px;
-}
-
-.menu__body-list-img {
-  height: 32px;
-  width: auto;
-}
-
-.menu__body-list-text {
   padding-left: 8px;
 }
 
-.separetor {
+.menu__body-list-img {
+  height: 20px;
+  width: auto;
+  margin-right: 18px;
+}
+
+.menu__body-list-text {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.separator {
   margin-bottom: 15px;
+  background-color: #393939;
+  height: 1px;
+  border: none;
+}
+
+.page__content {
+    display: flex;
+    flex-direction: column;
 }
